--- a/EC detection and analysis/EC_diachonic_analysis.ipynb
+++ b/EC detection and analysis/EC_diachonic_analysis.ipynb
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,18 +255,18 @@
     "            plt.ylim(ymin=0, ymax = 1)  \n",
     "            plt.tight_layout()\n",
     "            \n",
-    "        plt.savefig(F\"../results/EC_stability/{ec_val}_stability_{topic}.png\", dpi=300)\n"
+    "        plt.savefig(F\"../plot/EC_stability/{ec_val}_stability_{topic}.png\", dpi=300)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "02efe1a48c1b4bb0ba2039337789eafd",
+       "model_id": "369fe38653c847ba8e1939b3454f22b1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
     "                plot_stab = stability\n",
     "                if len(plot_stab)<4:\n",
     "                    while len(plot_stab)<4:\n",
-    "                        plot_stab.insert(0,np.nan)\n",
+    "                        plot_stab.insert(0, np.nan)\n",
     "                        \n",
     "                marker_dict = ec_marker(timeline, ec_coms)\n",
     "                marker_list = get_marker(marker_dict, timeline)\n",
@@ -452,18 +452,18 @@
     "                    label = str(topic).capitalize()\n",
     "                ax.set_xlabel(str(labels[i]+\" \"+ label),style=\"italic\", labelpad=15, fontsize=18, **csfont) \n",
     "    plt.tight_layout()\n",
-    "    plt.savefig(f\"../plot/{ec_val}_stability_plot.png\", dpi=300)"
+    "    plt.savefig(f\"../plot/EC_stability/{ec_val}_stability_plot.png\", dpi=300)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "99ea5841d58944b895bd2b6bdcd7c86b",
+       "model_id": "60818f513fbc413b80abbc222517640f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -491,13 +491,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "75cf570a7adc4e5cafc0bbc80f1c7b4d",
+       "model_id": "09559e0f2f2846fab5c2f294405aa42c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -522,6 +522,13 @@
    "source": [
     "unique_plot_stability(categories, \"not_EC\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
