--- a/Topic modeling/BERTopic.ipynb
+++ b/Topic modeling/BERTopic.ipynb
@@ -345,6 +345,8 @@
     "    results = {}\n",
     "    res_eval = {}\n",
     "    # for each topic retrieve all posts belonging to ECs and not-ECs \n",
+    "    # we opted for one model both for ECs and not-ECs to obtain the same topics\n",
+    "    # in both type of communities (strongly polarized/not strongly polarized).\n",
     "    for t in topics:\n",
     "        ec_temp = []\n",
     "        non_ec_temp = []\n",
